# MinimalQml

src/: CMakeLists.txt  Cell.qml  adder.h  main.cpp  main.qml  sequence.h  tableView.h
